syntax = "proto3";
option go_package = "./proto";

package helloworld;
 
// 定义一个服务
service Greeter {
  // 定义一个简单的RPC方法
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}
 
// 定义请求消息
message HelloRequest {
  string name = 1;
}
 
// 定义回复消息
message HelloReply {
  string message = 1;
}